--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <mteta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>SeungYoon</title>
-        <!--스타일/-->
         <link href="./style.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
         <script>
@@ -23,7 +22,7 @@
 
 <body>
     <div class="nav">
-        <div class="company-name">
+        <div class="name">
             <a class="nav-name" href="https://lsy-0412.github.io/test/">이승윤</a>
         </div>
         <div class="nav-right-items">
@@ -40,13 +39,13 @@
     </div>
 
     <div id='home'>
-        <h1>page1</h1>
+        <h1>home</h1>
     </div>
     <div id='about' class="noDisplay">
-        <h1>page2</h1>
+        <h1>about</h1>
     </div>
     <div id='more' class="noDisplay">
-        <h1>page3</h1>
+        <h1>more</h1>
     </div>
 
 </body>
