--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         </div>
         <div class="nav-right-items">
             <div class="nav-item">
-                <li> <a href="https://lsy-0412.github.io/test/#home" onclick="removeClass('home'); addClass('about'); addClass('more');">Home</a></li>
+                <li> <a href="#" onclick="removeClass('home'); addClass('about'); addClass('more');">Home</a></li>
             </div>
             <div class="nav-item">
-                <li> <a href="https://lsy-0412.github.io/test/#about" onclick="removeClass('about'); addClass('home'); addClass('more');">about</a></li>
+                <li> <a href="#" onclick="removeClass('about'); addClass('home'); addClass('more');">about</a></li>
             </div>
             <div class="nav-item">
-                <li> <a href="https://lsy-0412.github.io/test/#more" onclick="removeClass('more'); addClass('home'); addClass('about');">more</a></li>
+                <li> <a href="#" onclick="removeClass('more'); addClass('home'); addClass('about');">more</a></li>
             </div>
         </div>
     </div>
